--- a/技术快报190916-190921.md
+++ b/技术快报190916-190921.md
@@ -3,3 +3,23 @@
 > 业界技术跟进, 不限于后端技术, 按时间逆序梳理,每周一份
 
 本周轮值主编: 曹伟伟 下周轮值主编:  李广
+
+
+[190921] java 垃圾回收 (https://mp.weixin.qq.com/s/C8465IvIm-kMYpIT0YeRmg) [from 曹伟伟]
+
+[190920]hdfs之java接口 (https://github.com/wudirui/lw-technique-sharing/blob/master/docs/study_1.md) [from 小瑞]
+
+[190920]hdfs之数据流 (https://github.com/wudirui/lw-technique-sharing/blob/master/docs/study_2.md) [from 小瑞]
+
+[190921] B树和B+树 (https://my.oschina.net/u/4116286/blog/3107389) [from 陈强]
+
+[190921][支撑百万并发的“零拷贝”技术，你了解吗](https://mp.weixin.qq.com/s/mZujKx1bKl1T6gEI1s400Q) [from 大瑞]
+ * 介绍了在操作系统中，传统IO下，数据是怎么传输的，使用了一些新技术后，数据是怎么传输的
+ * 分析NIO中对数据拷贝的实现，NETTY,RocketMQ和Kafka在数据拷贝上的区别
+[190915][手把手教你重构乱糟糟的代码](https://mp.weixin.qq.com/s/rsNhQpTrJ2tlM1TwQYLQ7Q) [from 大瑞]
+ * 重构的另个一原动力是：代码的设计无法帮助我轻松的添加所需要的特性
+ * 散弹式修改
+ > 如果每遇到某种变化，你都必须在许多不同的类内做出许多小修改，你所面临的坏味道就是散弹式修改。如果需要修改的代码散布四处，你不但很难找到它们，也很容易忘记某个重要的修改。把所有需要修改的代码放进同一个类中，如果眼下没有合适的类可以安置这些代码就创造一个。
+ * 过多的注释
+ > 注释之所以存在是因为代码很糟糕 。注释的最高境界——代码即注释。当你感觉需要撰写注释时，请先尝试重构，试着让所有的注释都变得多余。我猜是这个原因造成程序员的代码注释都少
+
