--- a/技术快报190916-190921.md
+++ b/技术快报190916-190921.md
@@ -25,4 +25,7 @@
  > 如果每遇到某种变化，你都必须在许多不同的类内做出许多小修改，你所面临的坏味道就是散弹式修改。如果需要修改的代码散布四处，你不但很难找到它们，也很容易忘记某个重要的修改。把所有需要修改的代码放进同一个类中，如果眼下没有合适的类可以安置这些代码就创造一个。
  * 过多的注释
  > 注释之所以存在是因为代码很糟糕 。注释的最高境界——代码即注释。当你感觉需要撰写注释时，请先尝试重构，试着让所有的注释都变得多余。我猜是这个原因造成程序员的代码注释都少
+ 
+[190921] [idea插件](https://www.cnblogs.com/jajian/p/8081658.html) 
+[IntelliJ IDEA 18个常用插件，动图演示，让效率成为习惯!](https://www.jianshu.com/p/4e89d9b5e48a)[fom 李广]
 
